
#ifndef ANT_COLONY_SIMULATOR_ACTION_HPP
#define ANT_COLONY_SIMULATOR_ACTION_HPP


enum Action {
    NOTHING,
    GO_BACK_TO_COLONY_WITH_FOOD,
    COMING_HOME,
    SEARCH_FOR_FOOD,
    SEARCH_COLONY,
    EXPLORE,
    PATROLLING,
    BORN,
    CARRING_LARVA,
    ATTACK,
    DIE
};


#endif //ANT_COLONY_SIMULATOR_ACTION_HPP
