
#ifndef ANT_COLONY_SIMULATOR_TYPEOFCHUNK_HPP
#define ANT_COLONY_SIMULATOR_TYPEOFCHUNK_HPP

enum TypeOfChunk {
    EMPTY,
    COLONY,
    OBSTACLE
};

#endif //ANT_COLONY_SIMULATOR_TYPEOFCHUNK_HPP
